[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://objects/RegularPolygon.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/RegularPolygon.gd" type="Script" id=3]

[node name="Player" type="Node2D"]

editor/display_folded = true
script/script = ExtResource( 1 )
polar_controls = false

[node name="RegularPolygon" type="Area2D" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 0.902496, 0 )
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 3 )
sides = 3
size = 10
circle_collision = false

[connection signal="area_enter" from="RegularPolygon" to="." method="_on_RegularPolygon_area_enter"]

[connection signal="area_exit" from="RegularPolygon" to="." method="_on_RegularPolygon_area_exit"]


